[project]
name = "supplypulse"
version = "0.1.0"
description = "Multi-agent supplier risk intelligence platform"
requires-python = ">=3.11"
dependencies = [
    # Core LangChain stack
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-chroma>=0.1.0",

    # LLM providers (optional — install what you use)
    "openai>=1.40.0",
    # "anthropic>=0.34.0",

    # Vector store
    "chromadb>=0.5.0",

    # Data & APIs
    "requests>=2.32.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",

    # Backend
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # UI
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    "streamlit-folium>=0.22.0",

    # Synthetic data
    "faker>=28.0.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["supplypulse*"]
